@@ -6,17 +6,17 @@ public class FinderTest {
 
     @Test
     public void findMax_validArrayOfLengthOne() {
-        Assert.assertEquals(Finder.findMax(new int[]{1}), Integer.valueOf(1));
+        Assert.assertEquals(Finder.findMax(new int[]{1}), new Integer(1));
     }
 
     @Test
     public void findMax_validUnorderedArrayOfLengthGreaterThanOne() {
-        Assert.assertEquals(Finder.findMax(new int[]{4, 5, 1, 2, 3}), Integer.valueOf(5));
+        Assert.assertEquals(Finder.findMax(new int[]{4, 5, 1, 2, 3}), new Integer(5));
     }
 
     @Test
     public void findMax_validOrderedArrayOfLengthGreaterThanOne() {
-        Assert.assertEquals(Finder.findMax(new int[]{1,2,3}), Integer.valueOf(3));
+        Assert.assertEquals(Finder.findMax(new int[]{1,2,3}), new Integer(3));
     }
 
     @Test
@@ -31,17 +31,17 @@ public class FinderTest {
 
     @Test
     public void findMin_validArrayOfLengthOne() {
-        Assert.assertEquals(Finder.findMin(new int[]{1}), Integer.valueOf(1));
+        Assert.assertEquals(Finder.findMin(new int[]{1}), new Integer(1));
     }
 
     @Test
     public void findMin_validUnorderedArrayOfLengthGreaterThanOne() {
-        Assert.assertEquals(Finder.findMin(new int[]{4, 5, 1, 2, 3}), Integer.valueOf(1));
+        Assert.assertEquals(Finder.findMin(new int[]{4, 5, 1, 2, 3}), new Integer(1));
     }
 
     @Test
     public void findMin_validOrederedArrayOfLengthGreaterThanOne() {
-        Assert.assertEquals(Finder.findMin(new int[]{1,2,3}), Integer.valueOf(1));
+        Assert.assertEquals(Finder.findMin(new int[]{1,2,3}), new Integer(1));
     }
 
     @Test
